# goph419-f2025-lab02-stAK

./: README.md  pyproject.toml
examples/: driver.py  tests.py
src/lab_02/: linalg_interp.py
src/lab_02/examples/: driver.py  tests.py
