[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "goph419lab02"
version = "0.0.1"
authors = [
{ name="Ava Keerak", email="ava.keerak@ucalgary.ca" },
]
description="This repository provides the code for GOPH 419 Lab 2"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
"numpy",
"matplotlib",
]
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
"License :: OSI Approved :: GNU General Public License v3",
]
[project.urls]
"Homepage" = "https://github.com/avakeerak/goph419-f2025-lab02-stAK"